@@ -1,9 +1,11 @@
 DIST 389-console-1.1.3.tar.bz2 110947 RMD160 3a0f9c28824553d4f76772e04533bb8312b651ba SHA1 b1a5afa6e7039283ac340939d5e1728431370ba9 SHA256 b2d5196ecb46af7fae6bcbe598fdc6377f0ed7cfd891c640939b560f4ee22a63
 DIST 389-console-1.1.4.a1.tar.bz2 113082 RMD160 026fa51f130b0e452cc9737b27ec16255d6778e1 SHA1 8fc8616889ef8ef9145fb0198ee02dd5b4b0bcd6 SHA256 efd6163d854a7eedbed5698da2e4ef532da77787a2bb8328fbd88ae9a6006a26
 DIST 389-console-1.1.5.tar.bz2 112922 RMD160 289344f2eece71db7b0fe340def2242a3a9849f4 SHA1 98bc2db3c2f1c54948959e716485523f9047fd63 SHA256 5c05dd5d643bba389b4d714e2ddf2e5495f398079e63113e6ddfd244dc5ff3f5
+DIST 389-console-1.1.6.tar.bz2 113307 RMD160 8fdf7f4f6349b8796295a5e323aeecb5840f9db4 SHA1 06f7128bc86d1429c6fd0a920ecbb0bac9799206 SHA256 8b5a4c250df29224f2f833395555c9a8ba4b4ed2a90fa1e9f4b36026d7c28fbb
 DIST fedora.png 11606 RMD160 766c23052bd3f6d323e80f4b702e47e31d8b7671 SHA1 61bb2229f459323809bfa4768a0b9928c06bcb63 SHA256 88318e1704924c7d33aac3e37c195f99d29eb6f6f6235f254f254881257bbb0e
 EBUILD 389-console-1.1.3.ebuild 1579 RMD160 ab449040867deaa855234bbfa94786e788d7cccf SHA1 4e44054145dd49768ef82221ff1e88680ee29b38 SHA256 e6ad67a221be34b06a6d88e2e9b4c424074781dbcf5fa4a5873e5514a9df39b7
 EBUILD 389-console-1.1.4_alpha1.ebuild 1680 RMD160 ae6ab8f41dc59b0888e5d90f627191ff88ba9a3c SHA1 e123d2ac2549d410dda344322960e4d6607c8323 SHA256 92da8dd371c6d12009694243ede81dfc696698ba2e3a4cebc4c4d80ecb9fb35c
 EBUILD 389-console-1.1.5.ebuild 1626 RMD160 b183940131cfcaf5c52bfaa6243207d8a49ac78c SHA1 257a46a541add88d6fb61d38b3cdab9ba1296543 SHA256 fd78424c098e8bd4bda8df122cf9009eef621f02111515bfdcef27236e0e74a2
-MISC ChangeLog 2996 RMD160 d54d6674330d9581b9121c920a6d0ff3157f943b SHA1 fc7b134599f486f15a2b3d8fd64d7b243f1b5420 SHA256 5245edd46f8d19863ef4547876c00bb432d2fa3165d228f62695d659581cb22e
+EBUILD 389-console-1.1.6.ebuild 1626 RMD160 b183940131cfcaf5c52bfaa6243207d8a49ac78c SHA1 257a46a541add88d6fb61d38b3cdab9ba1296543 SHA256 fd78424c098e8bd4bda8df122cf9009eef621f02111515bfdcef27236e0e74a2
+MISC ChangeLog 3091 RMD160 0e447216f3b75aaee0395640f26a2cd9e142ead2 SHA1 247d3787bf6c96d0a693b8bcedfface3f2cf71e8 SHA256 6bc1b84e9845c5cb6a34c6d661b657a6af03908c96e8a9f9f3db69cd48850114
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
